# cmake-with-doctest

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: ccpp.yml
src/: CMakeLists.txt  quick_sort.cpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp  test_main.cpp
